--- a/template/pixiv_template.html
+++ b/template/pixiv_template.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>#VOICEROID 琴葉らくがき - nanagiのイラスト - pixiv</title>
-    <link rel="stylesheet" href="template/css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
     <meta charset="UTF-8">
 </head>
 
@@ -15,22 +15,18 @@
                     <div class="illusts-wrapper">
                         <div class="illusts-tiele-etc-wrapper">
                             <figure class="illusts-figure">
-                                <div class="illusts">
+                                <div class="illusts-1">
                                     <a href="https://i.pximg.net/img-original/img/2019/12/29/23/49/26/78570933_p0.jpg"
-                                        class="illust-a" target="_blank"
-                                        rel="noopener"><img alt="#VOICEROID 葵 - nanagiのイラスト"
-                                            src="template/img/test_01.jpg"
-                                            class="illust-images"
+                                        class="illust-a" target="_blank" rel="noopener"><img
+                                            alt="#VOICEROID 葵 - nanagiのイラスト" src="img/test_01.jpg" class="illust-images"
                                             style="height: 730px;">
                                     </a>
                                 </div>
 
-                                <div class="illusts">
+                                <div class="illusts-2">
                                     <a href="https://i.pximg.net/img-original/img/2019/12/29/23/49/26/78570933_p0.jpg"
-                                        class="illust-a" target="_blank"
-                                        rel="noopener"><img alt="#VOICEROID 葵 - nanagiのイラスト"
-                                            src="template/img/test_01.jpg"
-                                            class="illust-images"
+                                        class="illust-a" target="_blank" rel="noopener"><img
+                                            alt="#VOICEROID 葵 - nanagiのイラスト" src="img/test_01.jpg" class="illust-images"
                                             style="height: 730px;">
                                     </a>
                                 </div>
