余計な要素をそぎ落とす

--- a/template/pixiv_template.html
+++ b/template/pixiv_template.html
@@ -16,18 +16,14 @@
                         <div class="illusts-tiele-etc-wrapper">
                             <figure class="illusts-figure">
                                 <div class="illusts-1">
-                                    <a href="https://i.pximg.net/img-original/img/2019/12/29/23/49/26/78570933_p0.jpg"
-                                        class="illust-a" target="_blank" rel="noopener"><img
-                                            alt="#VOICEROID 葵 - nanagiのイラスト" src="img/test_01.jpg" class="illust-images"
-                                            style="height: 730px;">
+                                    <a class="illust-a" target="_blank" rel="noopener"><img src="img/test_01.jpg"
+                                            class="illust-images" style="height: 730px;">
                                     </a>
                                 </div>
 
                                 <div class="illusts-2">
-                                    <a href="https://i.pximg.net/img-original/img/2019/12/29/23/49/26/78570933_p0.jpg"
-                                        class="illust-a" target="_blank" rel="noopener"><img
-                                            alt="#VOICEROID 葵 - nanagiのイラスト" src="img/test_01.jpg" class="illust-images"
-                                            style="height: 730px;">
+                                    <a class="illust-a" target="_blank" rel="noopener"><img src="img/test_01.jpg"
+                                            class="illust-images" style="height: 730px;">
                                     </a>
                                 </div>
                             </figure>
