タイトルを「Pixiv」に変更し、HTMLジェネレーターのスケルトンファイルを追加

--- a/template/pixiv_template.html
+++ b/template/pixiv_template.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>#VOICEROID 琴葉らくがき - nanagiのイラスト - pixiv</title>
+    <title>Pixiv</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <meta charset="UTF-8">
 </head>
